Fixed ul.wide layout issue

--- a/layouts/default/layout.css
+++ b/layouts/default/layout.css
@@ -88,6 +88,7 @@ header span.title {
 #content ul.wide,
 #content dl.wide {
 	width: 100%;
+	max-width: 100%;
 }
 
 #content dl dt {
